--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,5 @@
 .App {
-  height: 100vh;
   background-color: #1a202c;
-  overflow: scroll;
   text-align: center;
 }
 
@@ -21,10 +19,14 @@
 }
 
 .header {
-  margin: 0;
+  margin-top: 40px;
   font-size: 50px;
   font-weight: bold;
   color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
 }
 
 .sub-text {
@@ -33,7 +35,7 @@
 }
 
 .gradient-text {
-  background: -webkit-linear-gradient(left, #60c657 30%, #35aee2 60%);
+  background: -webkit-linear-gradient(left, #7258f2 20%, #35aee2 100%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -53,7 +55,7 @@
 }
 
 .connect-wallet-button {
-  background: -webkit-linear-gradient(left, #60c657, #35aee2);
+  background: -webkit-linear-gradient(left, #7258f2 10%, #35aee2 100%);
   background-size: 200% 200%;
   animation: gradient-animation 4s ease infinite;
 }
@@ -69,11 +71,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
   width: 100%;
   bottom: 0;
   left: 0;
-  padding-bottom: 45px;
+  padding-bottom: 20px;
 }
 
 .twitter-logo {
@@ -89,29 +90,15 @@
 
 .gif-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+  grid-template-columns: repeat(5, 1fr);
   grid-gap: 1.5rem;
   justify-items: center;
   margin: 0;
   padding: 0;
 }
 
-.gif-grid .gif-item {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  justify-self: center;
-  align-self: center;
-}
 
-.gif-item img {
-  width: 100%;
-  height: 300px;
-  border-radius: 10px;
-  object-fit: cover;
-}
-
-.connected-container input[type='text'] {
+.connected-container input[type="text"] {
   display: inline-block;
   color: white;
   padding: 10px;
