--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
 .App {
+  height: 100%;
   background-color: #1a202c;
   text-align: center;
+  overflow: auto;
 }
 
 .container {
-  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -26,7 +27,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-
 }
 
 .sub-text {
@@ -71,10 +71,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  bottom: 0;
-  left: 0;
-  padding-bottom: 20px;
+  padding: 20px 0;
 }
 
 .twitter-logo {
@@ -96,7 +93,6 @@
   margin: 0;
   padding: 0;
 }
-
 
 .connected-container input[type="text"] {
   display: inline-block;
